bump version; update dependencies; code cleanup